# algorithmia

./: README.org  algorithmia.cabal  part-01.ijs  part-02.ijs  part-03.ijs  quest-01.ijs  quest-02.ijs  quest-03.ijs  quest-04.ijs  quest-06.ss  quest-07.ijs  quest-08.ijs  quest-09.ijs  quest-10.ijs  quest-11.ijs  quest-14.ijs  quest-14.ss  quest-15.hs  quest-16.ijs  quest-19.ijs
input/: 06b.in  06c.in  07a.in  07b.in  14b.in  14c.in  15c.in
output/: leaves.txt  plans.txt  track.txt  trackloop.txt  tree.txt
