cabal-version:      2.4
name:               algorithmia
version:            0.1.0.0
author:             jitwit

executable quest-15
    main-is:          quest-15.hs
    hs-source-dirs:   .
    default-language: Haskell2010
    build-depends:    base ^>=4.16.4.0,
                      psqueues, lens, linear, hashable, containers,
                      mtl, unordered-containers
